crates/biome_js_parser/tests/js_test_suite/error/jsx_element_attribute_string_literal_err.jsx
function Comp() {
	return (
		<a
			rel="
